compiler/tests/fail/typing/x86-64/slice_length_not_int.jazz
export fn main() -> reg u32 {
  stack u8[8] s;
  s[:u64 0] = 0;
  reg ptr u32[1] p = s[2:false];
  reg u32 r = p[#unaligned 0];
  return r;
}
